src/objects/CascadingSelectValue__c.object
<CustomObject>
    <description>Represents a Value of a Level of a Cascading select question type.</description>
    <fields>
        <fullName>CascadingLevel__c</fullName>
        <description>The Cascading Level which this Value belongs to.</description>
        <label>Cascading Level</label>
        <referenceTo>CascadingLevel__c</referenceTo>
        <relationshipLabel>Cascading Select Values</relationshipLabel>
        <relationshipName>Cascading_Select_Values</relationshipName>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ControllingSelectValue__c</fullName>
        <description>The Controlling Value that permits this value in the next level.</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Controlling Select Value</label>
        <referenceTo>CascadingSelectValue__c</referenceTo>
        <relationshipLabel>Cascading Select Values</relationshipLabel>
        <relationshipName>Cascading_Select_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <description>The Position of the select value</description>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The actual option value for a Cascading Level.</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cascading Select Value</label>
    <nameField>
        <displayFormat>CV-{00000000}</displayFormat>
        <label>Cascading Select Value Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cascading Select Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>